--- a/src/Classification/Structured_API/Strutured_API_fraud.ipynb
+++ b/src/Classification/Structured_API/Strutured_API_fraud.ipynb
@@ -917,6 +917,28 @@
    "source": [
     "### Kết quả đã được cải thiện đáng kể, đặc biệt ở chỉ số recall của nhãn 1 điều này khá quan trọng khi ta sẽ muốn ghi nhận nhầm còn hơn bỏ sót các giao dịch được cho là lừa đảo."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef697a6",
+   "metadata": {},
+   "source": [
+    "### Lưu kết quả"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8888b403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "output_df = test_predictions.withColumn(\"features\", col(\"features\").cast(\"string\"))\n",
+    "\n",
+    "\n",
+    "output_df.coalesce(1).write.csv(\"Result/Predictions\", header=True, mode=\"overwrite\")\n"
+   ]
   }
  ],
  "metadata": {
