--- a/src/Classification/MLlib_RDD_Based/MLlib_RDD_Fraud.ipynb
+++ b/src/Classification/MLlib_RDD_Based/MLlib_RDD_Fraud.ipynb
@@ -462,6 +462,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd952a85",
+   "metadata": {},
+   "source": [
+    "#### Nhận xét"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9861ecc0",
+   "metadata": {},
+   "source": [
+    "- Độ chính xác tổng thể (Accuracy): 0.9991 - cực kỳ cao.\n",
+    "- Tuy nhiên, đi vào từng lớp:\n",
+    "    - Đối với lớp 0:\n",
+    "        - Đây là lớp chiếm đa số toàn bộ dữ liệu. \n",
+    "        - Mô hình dự đoán rất tốt với precision, recall và F1 Score gần như tối đa. Kết quả gần như tuyệt đối.\n",
+    "    - Đối với lớp 1:\n",
+    "        - Lớp này chiếm phần nhỏ trong bộ dữ liệu (0.172%).\n",
+    "        - Số liệu đánh giá của mô hình thấp hơn lần lượt là precision 0.862, recall 0.625 và F1 Score 0.725. Đối với bài toán này, việc recall của lớp 1 thấp (chỉ 0.625) là vấn đề nghiêm trọng, bỏ xót nhiều trường hợp gian lận.\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90f8e733",
    "metadata": {},
    "source": [
@@ -522,6 +547,22 @@
     "print(\"Test F1 Score [0, 1]:\", [f1_score_0, f1_score_1])\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "021f2d16",
+   "metadata": {},
+   "source": [
+    "#### Nhận xét"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "938b5af8",
+   "metadata": {},
+   "source": [
+    "- Tuy kết quả recall của lớp 1 có sự cải thiện song đây vẫn là một kết quả không tốt. Để cải thiện việc này, chúng ta cần oversampling lớp 1 hoặc undersampling lớp 0."
    ]
   },
   {
