--- a/src/Regression/Low_Level/Low_Level.ipynb
+++ b/src/Regression/Low_Level/Low_Level.ipynb
@@ -40,7 +40,7 @@
           "height": 36
         },
         "id": "c8f9a01d",
-        "outputId": "99d0e87e-9264-4d5c-e1a4-1dffd6ce7a9f"
+        "outputId": "1e55419b-c745-45c9-9d8b-30556ec87698"
       },
       "outputs": [
         {
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "id": "e7d4c9b1",
       "metadata": {
         "id": "e7d4c9b1"
@@ -89,7 +89,8 @@
         "from pyspark.mllib.regression import LabeledPoint\n",
         "from pyspark.mllib.linalg import Vectors\n",
         "import pandas as pd\n",
-        "import time"
+        "import time\n",
+        "from math import sqrt\n"
       ]
     },
     {
@@ -136,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9e484f13",
-        "outputId": "f0517915-5fa1-47b5-adaf-c9741f1e6fe3"
+        "outputId": "8f57a82c-ca89-402e-aec2-3065dc1e7f3b"
       },
       "outputs": [
         {
@@ -204,7 +205,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hLM9AHC6RiPj",
-        "outputId": "9c5fcd4b-9ba7-4cba-cc22-35ec6a13c98d"
+        "outputId": "aa3546f5-2e75-42dd-a03e-cf978164f90f"
       },
       "outputs": [
         {
@@ -241,12 +242,6 @@
         "    float(parts[7]), float(parts[8]),  # dropoff_longitude, dropoff_latitude\n",
         "    float(parts[4]),                   # passenger_count\n",
         "    float(parts[10])                   # trip_duration\n",
-        "])\n",
-        "\n",
-        "test_data_parsed = test_data.map(lambda line: line.split(\",\")).map(lambda parts: [\n",
-        "    float(parts[4]), float(parts[5]),\n",
-        "    float(parts[6]), float(parts[7]),\n",
-        "    float(parts[3])\n",
         "])"
       ]
     },
@@ -452,14 +447,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aNkzqI3d4ENC",
-        "outputId": "e9a2b9a2-f2f8-4f7b-afd2-9fe6e579a4eb"
+        "outputId": "db552c89-d9d5-40e0-f48c-9a9366758867"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Training time: 9717.382247924805 seconds\n"
+            "Training time: 10661.048269748688 seconds\n"
           ]
         }
       ],
@@ -525,18 +520,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74425493",
-        "outputId": "66b36dc1-4fe0-4e7d-d379-afdc1777b557"
+        "outputId": "18f364af-c62c-47f9-869b-710bff941ee9"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Features: [-73.98104858398438, 40.74433898925781, -73.9729995727539, 40.78998947143555, 1.0], Actual: 1225.0, Predicted: 829.5365130762782\n",
-            "Features: [-73.99153137207031, 40.74943923950195, -73.95654296875, 40.7706298828125, 4.0], Actual: 1128.0, Predicted: 829.5365130762782\n",
-            "Features: [-73.95551300048828, 40.768592834472656, -73.94876098632812, 40.77154541015625, 1.0], Actual: 211.0, Predicted: 829.5365130762782\n",
-            "Features: [-73.98388671875, 40.738197326660156, -73.99120330810547, 40.72787094116211, 1.0], Actual: 251.0, Predicted: 829.5365130762782\n",
-            "Features: [-73.97953796386719, 40.753360748291016, -73.96399688720703, 40.763458251953125, 1.0], Actual: 652.0, Predicted: 829.5365130762782\n"
+            "Features: [-73.98104858398438, 40.74433898925781, -73.9729995727539, 40.78998947143555, 1.0], Actual: 1225.0, Predicted: 824.643509031342\n",
+            "Features: [-73.99153137207031, 40.74943923950195, -73.95654296875, 40.7706298828125, 4.0], Actual: 1128.0, Predicted: 824.643509031342\n",
+            "Features: [-73.95551300048828, 40.768592834472656, -73.94876098632812, 40.77154541015625, 1.0], Actual: 211.0, Predicted: 824.643509031342\n",
+            "Features: [-73.98388671875, 40.738197326660156, -73.99120330810547, 40.72787094116211, 1.0], Actual: 251.0, Predicted: 824.643509031342\n",
+            "Features: [-73.97953796386719, 40.753360748291016, -73.96399688720703, 40.763458251953125, 1.0], Actual: 652.0, Predicted: 824.643509031342\n"
           ]
         }
       ],
@@ -549,28 +544,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "id": "6fadedf4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6fadedf4",
-        "outputId": "df169d73-2231-4e3e-ebb2-bdb07c7f9625"
+        "outputId": "63378701-55e8-4562-8f68-aac5c4a9f31b"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mean Squared Error: 9892643.511620734\n"
+            "Mean Squared Error (MSE): 9891066.18029336\n",
+            "Root Mean Squared Error (RMSE): 3145.006546939666\n",
+            "R^2 Score: 0.01781753491506699\n"
           ]
         }
       ],
       "source": [
         "predictions = validation.map(lambda row: (row[-1], predict(tree, row)))\n",
         "mse = predictions.map(lambda x: (x[0] - x[1]) ** 2).mean()\n",
-        "print(f\"Mean Squared Error: {mse}\")"
+        "\n",
+        "rmse = sqrt(mse)\n",
+        "\n",
+        "# Tính toán R² Score\n",
+        "mean_y_true = validation.map(lambda row: row[-1]).mean()\n",
+        "ss_total = validation.map(lambda row: (row[-1] - mean_y_true) ** 2).sum()\n",
+        "ss_residual = predictions.map(lambda x: (x[0] - x[1]) ** 2).sum()\n",
+        "r2 = 1 - (ss_residual / ss_total)\n",
+        "\n",
+        "# In kết quả\n",
+        "print(f\"Mean Squared Error (MSE): {mse}\")\n",
+        "print(f\"Root Mean Squared Error (RMSE): {rmse}\")\n",
+        "print(f\"R^2 Score: {r2}\")"
       ]
     },
     {
@@ -585,14 +594,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 21,
+      "id": "cm0uHGE9oYaV",
+      "metadata": {
+        "id": "cm0uHGE9oYaV"
+      },
+      "outputs": [],
+      "source": [
+        "test_data_parsed = test_data.map(lambda row: row.split(\",\")).map(\n",
+        "    lambda parts: (\n",
+        "        parts[0],  # unique trip ID\n",
+        "        [\n",
+        "            float(parts[4]), float(parts[5]),  # pickup_longitude, pickup_latitude\n",
+        "            float(parts[6]), float(parts[7]),  # dropoff_longitude, dropoff_latitude\n",
+        "            float(parts[3])  # passenger_count\n",
+        "        ]\n",
+        "    )\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
       "id": "GxE6XQwvc8nM",
       "metadata": {
         "id": "GxE6XQwvc8nM"
       },
       "outputs": [],
       "source": [
-        "test_predictions_rdd = test_data_parsed.map(lambda row: (row[0], predict(tree, row)))\n",
+        "test_predictions_rdd = test_data_parsed.map(lambda row: (row[0], predict(tree, row[1])))\n",
         "test_predictions_df = test_predictions_rdd.toDF([\"id\", \"trip_duration\"])"
       ]
     },
@@ -610,10 +640,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "59605347",
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 24,
+      "id": "6ganBUbzcUcw",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ganBUbzcUcw",
+        "outputId": "a335432b-92f8-4247-ec69-4e9ffead1d77"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+---------+-----------------+\n",
+            "|id       |trip_duration    |\n",
+            "+---------+-----------------+\n",
+            "|id3004672|824.643509031342 |\n",
+            "|id3505355|1429.281770993709|\n",
+            "|id1217141|824.643509031342 |\n",
+            "|id2150126|824.643509031342 |\n",
+            "|id1598245|824.643509031342 |\n",
+            "+---------+-----------------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "test_predictions_df.show(5, truncate=False)\n",
         "test_predictions_df.coalesce(1).write.mode(\"overwrite\").parquet(os.path.join(base_path_result, \"result\"))"
