--- a/src/Classification/MLlib_RDD_Based/MLlib_RDD_Fraud.ipynb
+++ b/src/Classification/MLlib_RDD_Based/MLlib_RDD_Fraud.ipynb
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "lines=spark.sparkContext.textFile(\"creditcard.csv\")\n",
+    "lines=spark.sparkContext.textFile(\"hdfs://localhost:9000/lab03/creditcard.csv\")\n",
     "lines.count()"
    ]
   },
@@ -249,19 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "7f36ee3e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "283726"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, 0.978541954971695, 0.7700666508227654, 0.8402984903939014, 0.2717964907547009, 0.7661203363388934, 0.2621916978704357, 0.26487543874149616, 0.7862983529047245, 0.4539809683822362, 0.5052673462220311, 0.38118772246581145, 0.7443415693042709, 0.48619017593610825, 0.6412190072734594, 0.3838396643725496, 0.46410517798669204, 0.7277939830919614, 0.6406810941347436, 0.5519304220394026, 0.5795297525747019, 0.5578399149746115, 0.4802369598542956, 0.6669378230986288, 0.33643999609599445, 0.5872902523783181, 0.446012969158175, 0.4163451447884128, 0.31342266347556097, 0.00010470527605604418, 0.0)\n",
+      "(5.787304967822585e-06, 0.9352170233299468, 0.7531176669488862, 0.8681408192619086, 0.26876550734448534, 0.7623287857209992, 0.28112212055047436, 0.27017718255653134, 0.788042262834494, 0.41060274137949276, 0.5130180380913919, 0.32242211351494776, 0.7066833600612961, 0.5038542274352835, 0.6404734520442342, 0.5116969543365681, 0.3574426288295902, 0.7633809907036572, 0.644945381986696, 0.3866831265201538, 0.5858550460090379, 0.5654773291142932, 0.5460298304053196, 0.6789391667806758, 0.28935386333974467, 0.5595151957493345, 0.4027271804474953, 0.4154892660220704, 0.3119113161516553, 0.014738921870402115, 0.0)\n",
+      "(5.787304967822585e-06, 0.9418780172089026, 0.7653039594895851, 0.8684836477480651, 0.21366122165460716, 0.7656469003978437, 0.27555923742073796, 0.26680305504229257, 0.789434181116517, 0.41499937895009953, 0.507585049815728, 0.2718173824777015, 0.7109101085000273, 0.48763473006085745, 0.6363721290461002, 0.2891244124060262, 0.4156534072087239, 0.7112527599081695, 0.7884915207380864, 0.4670575919484235, 0.5780502308470583, 0.5597336550308539, 0.5102770105429978, 0.6626071841558184, 0.22382592386909095, 0.6142454033294951, 0.3891966874892003, 0.4176686729751576, 0.3143710291152579, 0.004807100963911322, 0.0)\n",
+      "(1.157460993564517e-05, 0.9386168309047992, 0.7765197872285701, 0.8642507014068559, 0.26979635271182784, 0.762975086664976, 0.2639841616818171, 0.26896777555589724, 0.7824835132574709, 0.490949592310647, 0.524302813899289, 0.23635461472324998, 0.7244773434060552, 0.5525089481021132, 0.6084059029899085, 0.3494188105227709, 0.4349950742323001, 0.7242425122693436, 0.6506651607838598, 0.6260602920935069, 0.5846152773779434, 0.5613274744848151, 0.5472706776985539, 0.6633922370815128, 0.40126980955807323, 0.5663427199358343, 0.5074968103902842, 0.4205609860045009, 0.3174899839572811, 0.00272428337217938, 0.0)\n",
+      "(1.157460993564517e-05, 0.951057144520383, 0.7773933049100515, 0.857187426639569, 0.24447172439094772, 0.7685503696493547, 0.26272087672843375, 0.2682565838511204, 0.7881778347516718, 0.44319018708866387, 0.5010377081471302, 0.36504485618049964, 0.7177571189222789, 0.4206122570535468, 0.6414422202047845, 0.375022735853622, 0.46212740051467616, 0.7294406388205362, 0.6580138055702963, 0.560722680333313, 0.5811700109123118, 0.5581223722291054, 0.48391517857964894, 0.6650415802168584, 0.33218459137191675, 0.5648392537255553, 0.4427493147717611, 0.42119633749593616, 0.3147692326044016, 0.00014285069261177775, 0.0)\n"
+     ]
     }
    ],
    "source": [
@@ -272,7 +273,8 @@
     "\n",
     "normalized_data = data.map(lambda line: tuple([(line[i] - min_features[i]) / (max_features[i] - min_features[i]) for i in range(len(line)-1)]+[line[-1]]))\n",
     "\n",
-    "normalized_data.count()"
+    "for row in normalized_data.take(5):\n",
+    "    print(row)"
    ]
   },
   {
@@ -330,8 +332,8 @@
    "id": "3c623c97",
    "metadata": {},
    "source": [
-    "- Sử dụng vòng lặp [100, 200, 500]\n",
-    "- Sử dụng regParam [0.01, 0.1, 0.5]\n",
+    "- Sử dụng vòng lặp [20,50,100]\n",
+    "- Sử dụng regParam [0, 0.01, 0.1]\n",
     "- Sử dụng thang đo recall trên label 1 để quyết định mô hình tốt nhất"
    ]
   },
@@ -376,24 +378,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iterations: 20, RegParams 0, Recall: 0.6125\n",
+      "Iterations: 20, RegParams 0, Recall: 0.6567\n",
       "Training with Iterations: 20, RegParams 0.01\n",
-      "Iterations: 20, RegParams 0.01, Recall: 0.3750\n",
+      "Iterations: 20, RegParams 0.01, Recall: 0.4925\n",
       "Training with Iterations: 20, RegParams 0.1\n",
-      "Iterations: 20, RegParams 0.1, Recall: 0.2000\n",
+      "Iterations: 20, RegParams 0.1, Recall: 0.2836\n",
       "Training with Iterations: 50, RegParams 0\n",
-      "Iterations: 50, RegParams 0, Recall: 0.6250\n",
+      "Iterations: 50, RegParams 0, Recall: 0.6716\n",
       "Training with Iterations: 50, RegParams 0.01\n",
-      "Iterations: 50, RegParams 0.01, Recall: 0.3750\n",
+      "Iterations: 50, RegParams 0.01, Recall: 0.4925\n",
       "Training with Iterations: 50, RegParams 0.1\n",
-      "Iterations: 50, RegParams 0.1, Recall: 0.2000\n",
+      "Iterations: 50, RegParams 0.1, Recall: 0.2836\n",
       "Training with Iterations: 100, RegParams 0\n",
-      "Iterations: 100, RegParams 0, Recall: 0.6250\n",
+      "Iterations: 100, RegParams 0, Recall: 0.6716\n",
       "Training with Iterations: 100, RegParams 0.01\n",
-      "Iterations: 100, RegParams 0.01, Recall: 0.3750\n",
+      "Iterations: 100, RegParams 0.01, Recall: 0.4925\n",
       "Training with Iterations: 100, RegParams 0.1\n",
-      "Iterations: 100, RegParams 0.1, Recall: 0.2000\n",
-      "Best Recall: 0.6250 with Iterations: 50, RegParams 0\n"
+      "Iterations: 100, RegParams 0.1, Recall: 0.2836\n",
+      "Best Recall: 0.6716 with Iterations: 50, RegParams 0\n"
      ]
     }
    ],
@@ -446,10 +448,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.9991\n",
-      "Test Precision [0, 1]: [0.9992982127818846, 0.8620689655172413]\n",
-      "Test Recall [0, 1]: [0.9998127603800965, 0.625]\n",
-      "Test F1 Score [0, 1]: [0.9995554203617474, 0.7246376811594203]\n"
+      "Test Accuracy: 0.9994\n",
+      "Test Precision [0, 1]: [0.9994826207610178, 0.9375]\n",
+      "Test Recall [0, 1]: [0.9999294167470532, 0.6716417910447762]\n",
+      "Test F1 Score [0, 1]: [0.9997059688326964, 0.7826086956521741]\n"
      ]
     }
    ],
@@ -480,9 +482,7 @@
     "        - Mô hình dự đoán rất tốt với precision, recall và F1 Score gần như tối đa. Kết quả gần như tuyệt đối.\n",
     "    - Đối với lớp 1:\n",
     "        - Lớp này chiếm phần nhỏ trong bộ dữ liệu (0.172%).\n",
-    "        - Số liệu đánh giá của mô hình thấp hơn lần lượt là precision 0.862, recall 0.625 và F1 Score 0.725. Đối với bài toán này, việc recall của lớp 1 thấp (chỉ 0.625) là vấn đề nghiêm trọng, bỏ xót nhiều trường hợp gian lận.\n",
-    "\n",
-    "    \n"
+    "        - Số liệu đánh giá của mô hình thấp hơn lần lượt là precision 0.9375, recall 0.6716 và F1 Score 0.7826. Đối với bài toán này, việc recall của lớp 1 thấp (chỉ 0.6716) là vấn đề nghiêm trọng, bỏ xót nhiều trường hợp gian lận."
    ]
   },
   {
@@ -518,13 +518,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Apache\\Spark\\python\\pyspark\\sql\\context.py:158: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.9994\n",
-      "Test Precision [0, 1]: [0.9995257291913683, 0.8636363636363636]\n",
-      "Test Recall [0, 1]: [0.9998576715058355, 0.6551724137931034]\n",
-      "Test F1 Score [0, 1]: [0.9996916727936817, 0.7450980392156864]\n"
+      "Test Accuracy: 0.9991\n",
+      "Test Precision [0, 1]: [0.9993167789662158, 0.813953488372093]\n",
+      "Test Recall [0, 1]: [0.9998114319387154, 0.546875]\n",
+      "Test F1 Score [0, 1]: [0.9995640442553994, 0.6542056074766355]\n"
      ]
     }
    ],
@@ -562,7 +570,7 @@
    "id": "938b5af8",
    "metadata": {},
    "source": [
-    "- Tuy kết quả recall của lớp 1 có sự cải thiện song đây vẫn là một kết quả không tốt. Để cải thiện việc này, chúng ta cần oversampling lớp 1 hoặc undersampling lớp 0."
+    "- Kết quả của test thấp hơn so với khi huấn luyện. Để cải thiện hiệu suất ta có thể thử các phương pháp như undersampling lớp 0 hoặc oversampling lớp 1."
    ]
   },
   {
@@ -583,11 +591,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row(features=DenseVector([0.0004, 0.974, 0.7635, 0.8613, 0.3362, 0.7586, 0.2661, 0.2625, 0.7881, 0.506, 0.4997, 0.2448, 0.7419, 0.3978, 0.6247, 0.209, 0.4086, 0.7598, 0.5516, 0.5599, 0.5789, 0.5559, 0.4785, 0.6669, 0.4625, 0.596, 0.336, 0.418, 0.314, 0.0027]), label=0.0, prediction=0.0)\n",
-      "Row(features=DenseVector([0.0005, 0.9542, 0.7726, 0.8712, 0.2865, 0.7632, 0.2655, 0.2649, 0.7878, 0.47, 0.501, 0.2427, 0.7024, 0.4225, 0.6378, 0.3833, 0.4245, 0.7467, 0.6338, 0.6166, 0.5803, 0.565, 0.5522, 0.6636, 0.4013, 0.5434, 0.5195, 0.4201, 0.3165, 0.0001]), label=0.0, prediction=0.0)\n",
-      "Row(features=DenseVector([0.0006, 0.9473, 0.7779, 0.8654, 0.2475, 0.7649, 0.2563, 0.2694, 0.7855, 0.4409, 0.5077, 0.3763, 0.7353, 0.4598, 0.655, 0.3453, 0.4595, 0.7139, 0.6563, 0.5814, 0.5813, 0.5591, 0.4904, 0.6663, 0.4524, 0.5645, 0.4304, 0.4191, 0.3152, 0.0006]), label=0.0, prediction=0.0)\n",
-      "Row(features=DenseVector([0.0009, 0.9319, 0.7561, 0.8506, 0.3111, 0.7483, 0.2825, 0.2754, 0.7923, 0.4404, 0.4902, 0.3441, 0.7375, 0.5302, 0.6532, 0.4224, 0.4723, 0.7143, 0.7367, 0.5439, 0.5955, 0.5755, 0.5685, 0.6888, 0.3342, 0.5661, 0.3879, 0.4127, 0.3139, 0.0272]), label=0.0, prediction=0.0)\n",
-      "Row(features=DenseVector([0.0011, 0.9596, 0.7781, 0.8519, 0.3055, 0.7664, 0.2677, 0.2633, 0.768, 0.4477, 0.51, 0.2596, 0.7244, 0.5213, 0.6568, 0.4557, 0.4389, 0.7316, 0.6253, 0.5823, 0.5775, 0.5855, 0.4852, 0.6628, 0.3253, 0.6214, 0.3973, 0.4214, 0.3178, 0.0008]), label=0.0, prediction=0.0)\n"
+      "Row(features=DenseVector([0.0001, 0.9252, 0.7668, 0.8304, 0.207, 0.7855, 0.2927, 0.265, 0.7946, 0.4645, 0.5206, 0.2805, 0.6961, 0.4517, 0.6472, 0.4253, 0.4678, 0.7028, 0.6563, 0.6015, 0.578, 0.5521, 0.4727, 0.6784, 0.5147, 0.5959, 0.4499, 0.4296, 0.3134, 0.0]), label=0.0, prediction=0.0)\n",
+      "Row(features=DenseVector([0.0002, 0.9772, 0.769, 0.8464, 0.3107, 0.7644, 0.2632, 0.2652, 0.7866, 0.4634, 0.5097, 0.3653, 0.7527, 0.4288, 0.6553, 0.2757, 0.4307, 0.7337, 0.6154, 0.5512, 0.5782, 0.5609, 0.5145, 0.6647, 0.4135, 0.6119, 0.3696, 0.4172, 0.3133, 0.0003]), label=0.0, prediction=0.0)\n",
+      "Row(features=DenseVector([0.0002, 0.9769, 0.766, 0.8616, 0.3183, 0.7587, 0.2638, 0.2609, 0.7885, 0.4971, 0.5056, 0.2551, 0.7031, 0.346, 0.644, 0.3741, 0.4427, 0.7372, 0.6209, 0.5058, 0.5773, 0.5609, 0.5144, 0.6668, 0.4309, 0.592, 0.3637, 0.418, 0.3138, 0.0001]), label=0.0, prediction=0.0)\n",
+      "Row(features=DenseVector([0.0003, 0.9486, 0.7786, 0.8596, 0.276, 0.7696, 0.2604, 0.2718, 0.781, 0.4566, 0.5295, 0.3485, 0.7102, 0.4259, 0.6462, 0.3707, 0.4423, 0.7086, 0.6985, 0.6264, 0.584, 0.5615, 0.5362, 0.6625, 0.3824, 0.5678, 0.3643, 0.4178, 0.3096, 0.0004]), label=0.0, prediction=0.0)\n",
+      "Row(features=DenseVector([0.0004, 0.9471, 0.7716, 0.8727, 0.239, 0.7667, 0.2595, 0.2711, 0.7835, 0.4636, 0.4926, 0.2736, 0.728, 0.4773, 0.6282, 0.2903, 0.4329, 0.7312, 0.5646, 0.501, 0.5809, 0.559, 0.4989, 0.6668, 0.439, 0.5581, 0.4377, 0.4148, 0.3112, 0.0021]), label=0.0, prediction=0.0)\n"
      ]
     }
    ],
