--- a/src/Regression/Low_Level/Low_Level.ipynb
+++ b/src/Regression/Low_Level/Low_Level.ipynb
@@ -142,16 +142,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7e377631",
       "metadata": {
         "id": "7e377631"
       },
       "outputs": [],
       "source": [
-        "sample_data = sc.textFile(os.path.join(base_path, \"sample_submission/sample_submission.csv\"))\n",
-        "train_data = sc.textFile(os.path.join(base_path, \"train/train.csv\"))\n",
-        "test_data = sc.textFile(os.path.join(base_path, \"test/test.csv\"))"
+        "sample_data = sc.textFile(\"hdfs://localhost:9000/lab03/sample_submission.csv\")\n",
+        "train_data = sc.textFile(\"hdfs://localhost:9000/lab03/train.csv\")\n",
+        "test_data = sc.textFile(\"hdfs://localhost:9000/lab03/test.csv\")"
       ]
     },
     {
