--- a/src/Regression/MLlib_RDD_Based/MLlib_RDD_Based.ipynb
+++ b/src/Regression/MLlib_RDD_Based/MLlib_RDD_Based.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "c8f9a01d",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "'/usr/bin/python3'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e7d4c9b1",
    "metadata": {},
    "outputs": [],
@@ -80,23 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "36586713",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "25/05/02 09:22:18 WARN Utils: Your hostname, LAPTOP-I95CP2I9 resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
-      "25/05/02 09:22:18 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/05/02 09:22:19 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(\"DecisionTreeRegressor\") \\\n",
@@ -123,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "id": "9e484f13",
    "metadata": {},
    "outputs": [
@@ -131,34 +118,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tienanh/22120017/Lab03_Spark/src/Regression/MLlib_RDD_Based\n"
+      "/home/tienanh/22120017/Lab03_Spark/Lab03_Spark/src/Regression/MLlib_RDD_Based\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "print(os.getcwd())\n",
-    "base_path = \"/home/tienanh/22120017/Lab03_Spark/dataset/nyc-taxi-trip-duration\""
+    "print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "7e377631",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_data = sc.textFile(os.path.join(base_path, \"sample_submission/sample_submission.csv\"))\n",
-    "train_data = sc.textFile(os.path.join(base_path, \"train/train.csv\"))\n",
-    "test_data = sc.textFile(os.path.join(base_path, \"test/test.csv\"))"
+    "sample_data = sc.textFile(\"hdfs://localhost:9000/lab03/sample_submission.csv\")\n",
+    "train_data = sc.textFile(\"hdfs://localhost:9000/lab03/train.csv\")\n",
+    "test_data = sc.textFile(\"hdfs://localhost:9000/lab03/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 13,
    "id": "76c7bf26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "sample_data_header = sample_data.first()\n",
     "train_data_header = train_data.first()\n",
@@ -171,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 14,
    "id": "bee50978",
    "metadata": {},
    "outputs": [
@@ -195,10 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 15,
    "id": "4180a848",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 16,
    "id": "e26869fd",
    "metadata": {},
    "outputs": [
@@ -529,7 +530,7 @@
     "predictions_rdd = sc.parallelize(predictions_local)\n",
     "predictions_df = predictions_rdd.map(lambda x: Row(id=x[0], trip_duration=x[1])).toDF()\n",
     "predictions_df.coalesce(1).write.parquet(\n",
-    "    path=os.path.join(base_path, \"result\"),\n",
+    "    path=os.path.join(base_path_result, \"result\"),\n",
     "    mode=\"overwrite\"\n",
     ")"
    ]
